--- a/server/build.gradle
+++ b/server/build.gradle
@@ -15,6 +15,12 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
 
+compileJava {
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+}
+
+
 jar {
     baseName = 'bingo-server'
     version = '0.1.0'
