--- a/load/build.gradle
+++ b/load/build.gradle
@@ -21,6 +21,9 @@ dependencies {
     compile('ch.qos.logback:logback-core:1.1.2')
     compile('ch.qos.logback:logback-classic:1.1.3')
     compile('org.slf4j:slf4j-api:1.7.7')
+    compile 'javax.json:javax.json-api:1.0'
+    compile 'org.glassfish:javax.json:1.0.4'
+
 }
 
 
