--- a/server/build.gradle
+++ b/server/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     compile('joda-time:joda-time:2.5')
     compile('com.fasterxml.jackson.datatype:jackson-datatype-joda:2.5.4')
 
+    compile('org.springframework.data:spring-data-mongodb:1.8.0.RELEASE')
+    compile('org.mongodb:mongo-java-driver:3.1.0')
+
     testCompile("junit:junit:4.11")
     testCompile('org.jboss.resteasy:resteasy-client:3.0.9.Final')
     testCompile('org.jboss.resteasy:resteasy-jackson-provider:3.0.9.Final')
